[package]
name = "rc-rust-mob"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
async-compat = "0.2.3"
clap = { version = "4.5.4", features = ["derive"] }
futures = "0.3.30"
html5ever = "0.27.0"
markup5ever_rcdom = "0.3.0"
reqwest = "0.12.3"
smol = "2.0.0"
